--- a/chunks/style.css
+++ b/chunks/style.css
@@ -1,450 +1,284 @@
-
-
-
 body {
-
-	margin: 0px;
-	padding: 0px;
-
-	top: 0px;
-	left: 0px;
-	right: 0px;
-	bottom: 0px;
-
 	background: #FEFEFE;
-
-	color: #FEFEFE;
-	text-align: center;
+	bottom: 0;
+	color: #333333;
 	font: 400 1em/1.4 'Droid Sans', Sans;
-
-	}
-
-
-
-h1	{
-
+	left: 0;
 	margin: 0;
-
-	color: #222;
-	text-align: center;
-	text-decoration: none !important;
-	font: 200 73px/125px 'Raleway', Sans;
-
-	}
-
-
-
-.tag {
-	
-	text-align: center;
-	margin: -25px 0 0 0;
-		
-	text-decoration: none !important;
-
-	}
-
-
-
-p	{ text-align: justify; }
-
-
-
-
-
-
-
-h2 {
-	
-	margin: 0 0 .5em;
-
-	color: #333333;
-	font: 300 2.75em/1.2 'Raleway', Sans;
-
-	}
-
-h3 { 
-
-	margin: 0.3em 0;
-
-	color: #333333;
-	font: 400 2em/1.3 'Raleway', Sans;
-
-	}
-
-
-
-.bubble {
-
-	margin: 0 1%;
-	padding: 1%;
-	
-	}
-
-.bubble h2 {
-
-	color: #fefefe;
-	
-	margin: 30px 3% 3% 3%;
-	
-	}
-
-.bubble h3 {
-
-	color: #fefefe;
-	
-	margin: 20px 2% 2% 2%;
-	
-	}
-
-.bubble h4 { color: #fefefe; }
-
-.bubble p { margin: 0 1em 1.5em; }
-
-.maxsix { max-width: 600px; margin: 0 auto 1.5em !important; }
-
-
-.windows {
-
-	color: #FEFEFE;
-	text-align: center;
-	vertical-align: middle;
-
-	border-radius: 3px;
-	-webkit-border-radius: 3px;
-	background: #222222 url(../images/Windows.png) 40px center no-repeat;
-
-	}
-
-
-
-.previous-windows {
-
-	color: #FEFEFE;
-	text-align: center;
-	vertical-align: middle;
-
-	border-radius: 3px;
-	-webkit-border-radius: 3px;
-	background: #222222 url(../images/preWindows.png) 40px center no-repeat;
-
-	}
-
-
-
-.ubuntu	{
-
-	color: #FEFEFE;
-	text-align: center;
-	vertical-align: middle;
-
-	border-radius: 3px;
-	-webkit-border-radius: 3px;
-	background: #222222 url(../images/Ubuntu.png) 40px center no-repeat;
-
-	}
-
-
-
-.warning {
-	
-	color: #FEFEFE;
-	
-	background: #DF382C;
-	border-radius: 3px;
-	-webkit-border-radius: 3px;
-
-	}
-
-
-
-.source, .choose {
-
-	color: #FEFEFE;
-	text-align: center;
-	vertical-align: middle;
-
-	border-radius: 3px;
-	-webkit-border-radius: 3px;
-	background: #222222;
-
-	}
-
-
-
-.standard {
-
-	color: #FEFEFE;
-	text-align: center;
-	vertical-align: middle;
-
-	background: #222222;
-	border-radius: 3px;
-	-webkit-border-radius: 3px;
-	}
-
-
-
-.prefered { background-color: #121212; }
-
-
-
-.bubble.ubuntu h2,
-.bubble.ubuntu h3,
-.bubble.ubuntu h4,
-.bubble.windows h2,
-.bubble.windows h3,
-.bubble.windows h4,
-.bubble.previous-windows h2,
-.bubble.previous-windows h3,
-.bubble.previous-windows h4 { 
-	margin: 20px 3% 3% 150px;
-	}
-
-.bubble.ubuntu p,
-.bubble.windows p,
-.bubble.previous-windows p { margin: 0 3% 3% 150px; }
-
-.bubble a { color: #19B6EE; }
-.bubble a:hover,
-.bubble a:active { color: #47C5F1; }
-	
-.centre { text-align: center; }
-
-.span_1_of_1 { width: 100%; }
-
-table { 
-	max-width: 500px;
-	width: 94%;
-	text-align: left;
-	margin: 20px auto;
-	}
-
-li {
-
 	padding: 0;
-	margin: 10px 0;
-	
+	right: 0;
+	text-align: center;
+	top: 0;
 	}
 
-
-
-
-h2, h3, h4, h5, h6 { margin: 0; }
-
-
-h4 { 
-color: #444;
-font: 400 1.5em/1.25 'Raleway', Sans; /* 24 / 16	*/
-margin-bottom : 0.5em;
+header {
+	color: #000;
+	padding: 20px;
+	text-align: center;
+	max-width: 750px;
 	}
 
-h5 { 
-color: #555;
-margin-bottom : 1.25em;
-font-size : 1em; /* 20 / 16 */ }
-
-h6 { 
-color: #666;
-font-size : 1em; /* 16 / 16	*/ }
-
-/*	TYPOGRAPHY	============================================================================= */
-
-p, ol, ul, dl, address { 
-margin-bottom : 1.5em; 
-font-size : 1em; /* 16 / 16 = 1 */ 
-text-align: justify;
+#maincontent, .maincontent {
+	color: #333;
+	margin: 0 auto;
+	padding: 0;
 	}
 
-.left { text-align: left; }
-.center { text-align: center; }
-.right { text-align: right; }
-
-ul, 
-ol { 
-margin : 0 0 1.5em 0; 
-padding : 0 0 0 24px; }
-
-li ul, 
-li ol { 
-margin : 0;
-font-size : 1em; /* 16 / 16 = 1 */ }
-
-dl, 
-dd { 
-margin-bottom : 1.5em; }
-
-dt { 
-font-weight : normal; }
-
-b, strong { 
-font-weight : bold; }
-
-hr { 
-display : block; 
-margin : 1em 0; 
-padding : 0;
-height : 1px; 
-border : 0; 
-border-top : 1px solid #ccc;
+#footercontainer {
+	background: #121212;
+	margin: 5% 0 0;
 	}
 
-small { 
-font-size : 1em; /* 16 / 16 = 1 */ }
-
-sub, sup { 
-font-size : 75%; 
-line-height : 0; 
-position : relative; 
-vertical-align : baseline; }
-
-sup { 
-top : -.5em; }
-
-sub { 
-bottom : -.25em; }
-
-.subtext {
+h1 {
+	color: #121212;
+	font: 200 73px/125px Raleway, Sans;
+	margin: 0;
+	text-align: center;
+	text-decoration: none!important;
+	}
+.tag {
+	font-size: .9em;
+	margin: -25px 0 0;
+	text-align: center;
+	text-decoration: none!important;
+	}
+h2 {
+	color: #333;
+	font: 300 2em/1.2 Raleway, Sans;
+	margin: 0 0 .5em;
+	}
+h3 {
+	color: #333;
+	font: 400 1.5em/1.3 Raleway, Sans;
+	margin: .3em 0;
+	}
+h4 {
+	color: #444;
+	font: 400 1.3em/1.25 Raleway, Sans;
+	margin-bottom: .5em;
+	}
+h5 {
+	color: #555;
+	font-size: 1em;
+	margin-bottom: 1.25em;
+	}
+h6 {
 	color: #666;
+	font-size: 1em;
+	}
+h2,h3,h4,h5,h6 { margin: 0; }
+p {
+	font-size: .9em;
+	text-align: justify;
+	}
+p,ol,ul,dl,address {
+	font-size: .9em;
+	margin-bottom: 1em;
+	text-align: justify;
 	}
 
-/* LINKS =============================================================================	*/
+b,strong { font-weight: 700; }
+small { font-size: .9em; }
 
-a { 
-color: #006AC0;
--webkit-transition: all 500ms ease-in-out;
--moz-transition: all 500ms ease-in-out;
--o-transition: all 500ms ease-in-out;
-transition: all 500ms ease-in-out;
-text-decoration: none;
+sub,sup {
+	color: #666;
+	font-size: 75%;
+	line-height: 0;
+	position: relative;
+	vertical-align: baseline;
 	}
-.
-a:focus { 
-outline : none;
-	}
+sup { top: -.5em; }
+sub { bottom: -.25em;  }
 
-a:hover, 
-a:active { 
-outline : 0;
-color: #19B6EE;
--webkit-transition: all 500ms ease-in-out;
--moz-transition: all 500ms ease-in-out;
--o-transition: all 500ms ease-in-out;
-transition: all 500ms ease-in-out;
+a {
+	-moz-transition: all 300ms ease-in-out;
+	-o-transition: all 300ms ease-in-out;
+	-webkit-transition: all 300ms ease-in-out;
+	color: #006AC0;
+	text-decoration: none;
+	transition: all 300ms ease-in-out;
 	}
+a:hover,a:active {
+	-moz-transition: all 300ms ease-in-out;
+	-o-transition: all 300ms ease-in-out;
+	-webkit-transition: all 300ms ease-in-out;
+	color: #19B6EE;
+	outline: 0;
+	transition: all 300ms ease-in-out;
+	}
+a:focus { outline: none;}
 
-/* IMAGES ============================================================================= */
+.nav a, .nav:hover a.prefered {
+	-webkit-border-radius: 3px;
+	background: #EFEFEF;
+	border-radius: 3px;
+	color: #333;
+	display: inline-block;
+	font-size: .9em;
+	padding: 10%;
+	width: 80%;
+	}
+.nav a:hover, .nav a.prefered, .nav:hover a:hover.prefered {
+	background: #121212;
+	color: #EFEFEF;
+	}
+.nav { margin: 3% 0 0; }
+
+.floatleft { float: left; margin: 0 1% 0 0; }
+.floatright { float: right; margin: 0 0 0 1%; }
 
 img {
-	border : 0;
+	border: 0;
 	max-width: 100%;
 	vertical-align: middle;
 	}
-
-img.floatleft { float: left; margin: 0 1% 0 0; }
-img.floatright { float: right; margin: 0 0 0 1%; }
-
 img.fullwidth {
 	margin: 1% -1%;
 	max-width: 102%;
 	}
 
+.left { text-align: left; }
+.right { text-align: right; }
+.center { text-align: center; }
 
+.breaker, .clear { clear: both; }
 
-/*	MAIN LAYOUT	============================================================================= */
+.bubble {
+	margin: 0;
+	padding: 1%;
+	}
+.bubble h2 {
+	color: #fefefe;
+	margin: 30px 3% 3%;
+	}
+.bubble h3 {
+	color: #fefefe;
+	margin: 20px 2% 2%;
+	}
+.bubble h4 { color: #fefefe; }
+.bubble p { margin: 0 1em 1.5em; }
+.bubble.ubuntu h2, .bubble.ubuntu h3, .bubble.ubuntu h4, .bubble.windows h2, .bubble.windows h3, .bubble.windows h4, .bubble.previous-windows h2, .bubble.previous-windows h3, .bubble.previous-windows h4 { margin: 20px 3% 3% 150px; }
+.bubble.ubuntu p, .bubble.windows p, .bubble.previous-windows p { margin: 0 3% 3% 150px; }
+.bubble a { color: #19B6EE; }
+.bubble a:hover, .bubble a:active { color: #47C5F1; }
 
-#skiptomain { display: none; }
+.maxsix {
+	margin: 0 auto 1.5em !important;
+	max-width: 600px;
+	}
 
-#wrapper {
-	width: 100%;
-	position: relative;
+.windows {
+	-webkit-border-radius: 3px;
+	background: #121212 url(../images/Windows.png) 40px center no-repeat;
+	border-radius: 3px;
+	color: #FEFEFE;
+	text-align: center;
+	vertical-align: middle;
+	}
+.previous-windows {
+	-webkit-border-radius: 3px;
+	background: #121212 url(../images/preWindows.png) 40px center no-repeat;
+	border-radius: 3px;
+	color: #FEFEFE;
+	text-align: center;
+	vertical-align: middle;
+	}
+.ubuntu {
+	-webkit-border-radius: 3px;
+	background: #121212 url(../images/Ubuntu.png) 40px center no-repeat;
+	border-radius: 3px;
+	color: #FEFEFE;
+	text-align: center;
+	vertical-align: middle;
+	}
+.source, .choose {
+	-webkit-border-radius: 3px;
+	background: #121212;
+	border-radius: 3px;
+	color: #FEFEFE;
+	text-align: center;
+	vertical-align: middle;
+	}
+.standard {
+	-webkit-border-radius: 3px;
+	background: #121212;
+	border-radius: 3px;
+	color: #FEFEFE;
+	text-align: center;
+	vertical-align: middle;
+	}
+.warning {
+	-webkit-border-radius: 3px;
+	background: #DF382C;
+	border-radius: 3px;
+	color: #FEFEFE;
+	}
+.prefered { background-color: #111111; }
+
+.span_1_of_1 { width: 100%; }
+
+table {
+	margin: 20px auto;
+	max-width: 500px;
 	text-align: left;
+	width: 94%;
 	}
 
-	#headcontainer {
-		width: 100%;
+li {
+	margin: 10px 0;
+	padding: 0;
+	}
+ul,ol {
+	margin: 0 0 1.5em;
+	padding: 0 0 0 24px;
+	}
+li ul,li ol {
+	font-size: 1em;
+	margin: 0;
 	}
 
-		header {
-			clear: both;
-			width: 750px;
-			font-size: 0.8125em; /* 13 / 16 */
-			max-width: 92.3em; /* 1200px / 13 */
-			margin: 0 auto;
-			padding: 20px;
-			position: relative;
-			color: #000;
-			text-align: center;
-		}
- 
-	 
-		
-
-	#maincontentcontainer {
-		width: 100%;
+hr {
+	border: 0;
+	border-top: 1px solid #ccc;
+	display: block;
+	height: 1px;
+	margin: 1em 0;
+	padding: 0;
 	}
-		
-			#maincontent{
-				clear: both;
-				width: 70%; /* 1000px / 1250px */
-				font-size: 0.8125em; /* 13 / 16 */
-				max-width: 92.3em; /* 1200px / 13 */
-				margin: 0 auto;
-				padding: 0px;
-				color: #333333;
-				line-height: 1.5em;
-				position: relative;
-			}
-		
-			.maincontent{
-				clear: both;
-				width: 70%; /* 1000px / 1250px */
-				font-size: 0.8125em; /* 13 / 16 */
-				max-width: 92.3em; /* 1200px / 13 */
-				margin: 0 auto;
-				padding: 1em 0px;
-				color: #333333;
-				line-height: 1.5em;
-				position: relative;
-			}
-/*---   Footer   ---*/
 
-#footercontainer {
-	width: 100%;
-	background: #222;
-	margin: 5% 0 0 0;
-	}
+dl,dd { margin-bottom: 1.5em; }
+dt { font-weight: 400; }
+
 footer {
-	clear: both;
-	font: 400 0.8125em/1.7 'Droid Sans', Sans;
-	text-align: left;
-	width: 70%;
-	max-width: 92.3em;
-	margin: 0 auto;
-	padding: 20px 0px 10px 0px;
 	color: #999;
+	font: 400 .9em/1.7 'Droid Sans', Sans;
+	margin: 0 auto;
+	padding: 20px 0 10px;
+	text-align: left;
 	}
 footer h4 {
-	font: 400 1.5em/1.25 'Raleway', Sans; /* 24 / 16  */
-	color: #cccccc;
-	margin-bottom: 0.5em;
+	color: #ccc;
+	font: 400 1.3em/1.25 Raleway, Sans;
+	margin-bottom: .5em;
 	}
+
 footer a {
-	color: #cccccc;
+	-moz-transition: all 300ms ease-in-out;
+	-ms-transition: all 300ms ease-in-out;
+	-o-transition: all 300ms ease-in-out;
+	-webkit-transition: all 300ms ease-in-out;
+	color: #ccc;
 	text-decoration: none;
-	transition: all 500ms ease-in-out;
-	-o-transition: all 500ms ease-in-out;
-	-ms-transition: all 500ms ease-in-out;
-	-moz-transition: all 500ms ease-in-out;
-	-webkit-transition: all 500ms ease-in-out;
+	transition: all 300ms ease-in-out;
 	}
 footer a:hover {
+	-moz-transition: all 300ms ease-in-out;
+	-ms-transition: all 300ms ease-in-out;
+	-o-transition: all 300ms ease-in-out;
+	-webkit-transition: all 300ms ease-in-out;
 	color: #fafafa;
 	outline: 0;
-	transition: all 500ms ease-in-out;
-	-o-transition: all 500ms ease-in-out;
-	-ms-transition: all 500ms ease-in-out;
-	-moz-transition: all 500ms ease-in-out;
-	-webkit-transition: all 500ms ease-in-out;
+	transition: all 300ms ease-in-out;
 	}
 footer ul {
 	margin: 0;
@@ -452,83 +286,37 @@ footer ul {
 	}
 footer li {
 	list-style: none;
+	margin: 0;
 	padding: 1% 0;
-	margin: 0;
 	}
-footer img {
-	margin: 0px 0px 10px;
-	padding: 0px;
+footer a img {
+	-moz-transition: all 300ms ease-in-out;
+	-ms-transition: all 300ms ease-in-out;
+	-o-transition: all 300ms ease-in-out;
+	-webkit-transition: all 300ms ease-in-out;
 	border: none;
-	opacity: 0.8;
-	transition: all 500ms ease-in-out;
-	-o-transition: all 500ms ease-in-out;
-	-ms-transition: all 500ms ease-in-out;
-	-moz-transition: all 500ms ease-in-out;
-	-webkit-transition: all 500ms ease-in-out;
 	max-width: 100%;
-	vertical-align: middle;
+	opacity: 0.8;
+	transition: all 300ms ease-in-out;
 	}
-footer img.floatleft { float: left; margin: 0 10px 0 0; }
-footer img.floatright { float: right; margin: 0 0 0 10px; }
 footer a:hover img {
+	-moz-transition: all 300ms ease-in-out;
+	-ms-transition: all 300ms ease-in-out;
+	-o-transition: all 300ms ease-in-out;
+	-webkit-transition: all 300ms ease-in-out;
 	opacity: 1;
-	transition: all 500ms ease-in-out;
-	-o-transition: all 500ms ease-in-out;
-	-ms-transition: all 500ms ease-in-out;
-	-moz-transition: all 500ms ease-in-out;
-	-webkit-transition: all 500ms ease-in-out;
+	transition: all 300ms ease-in-out;
 	}
 
-
-
-/*---	 Sections	 ---*/
-
-.section {
-	clear: both;
-	padding: 0;
-	margin: 3% 0;
+html {
+	-ms-text-size-adjust: 100%;
+	-webkit-overflow-scrolling: touch;
+	-webkit-tap-highlight-color: #349edb;
+	-webkit-text-size-adjust: 100%;
 	}
-.nav {
-	margin: 3% 0 0;
-	}
-.nav a, .nav:hover a.prefered {
-	padding: 10%;
-	color: #333333;
-	background: #EFEFEF;
-	border-radius: 3px;
-	-webkit-border-radius: 3px;
-	display: inline-block;
-	width: 80%;
-	}
-.nav a:hover, .nav a.prefered, .nav:hover a:hover.prefered {
-	color: #EFEFEF;
-	background: #222222;
-	}
+.clearfix { zoom: 1; }
 
-
-	
-/*	CODE	============================================================================= */
-
-pre.code {
-	padding: 0;
-	margin: 0;
-	font-family: monospace;
-	white-space: pre-wrap;
-	font-size: 1.1em;
-	}
-
-strong.code {
-	font-weight: normal;
-	font-family: monospace;
-	font-size: 1.2em;
-	}
-
-
-/
-
-/*	COLUMNS	============================================================================= */
-
-.twocolumns{
+.twocolumns {
 	-moz-column-count: 2;
 	-moz-column-gap: 2em;
 	-webkit-column-count: 2;
@@ -537,84 +325,25 @@ strong.code {
 	column-gap: 2em;
 	}
 
+.ie7 img, .iem7 img { -ms-interpolation-mode: bicubic; }
 
-/*	GLOBAL OBJECTS ============================================================================= */
-
-.breaker { clear: both; }
-
-.group:before,
-.group:after {
-	content:"";
-	display:table;
+button,input[type=button],input[type=reset],input[type=submit] { -webkit-appearance: button; }
+input[type=checkbox],input[type=radio] { box-sizing: border-box; }
+input[type=search] {
+	-moz-box-sizing: content-box;
+	-webkit-box-sizing: content-box;
 	}
-.group:after {
-	clear:both;
+button::-moz-focus-inner,input::-moz-focus-inner {
+	border: 0;
+	padding: 0;
 	}
-.group {
-	zoom:1; /* For IE 6/7 (trigger hasLayout) */
-	}
-
-
-.floatleft { float: left; }
-.floatright { float: right; }
-.clear { clear: both; }
-
-/* VENDOR-SPECIFIC ============================================================================= */
-
-html { 
-	-webkit-overflow-scrolling : touch; 
-	-webkit-tap-highlight-color : rgb(52,158,219); 
-	-webkit-text-size-adjust : 100%; 
-	-ms-text-size-adjust : 100%;
+::-webkit-input-placeholder,input::-moz-placeholder {
+	font-size: .9em;
+	line-height: 1.4;
 	}
 
-.clearfix { zoom : 1; }
-
-::-webkit-selection { 
-	background : rgb(23,119,175); 
-	color : rgb(250,250,250); 
-	text-shadow : none;
+::-webkit-selection,::-moz-selection,: : selection {
+	background: #1777af;
+	color: #fafafa;
+	text-shadow: none;
 	}
-
-::-moz-selection { 
-	background : rgb(23,119,175); 
-	color : rgb(250,250,250); 
-	text-shadow : none;
-	}
-
-::selection { 
-	background : rgb(23,119,175); 
-	color : rgb(250,250,250); 
-	text-shadow : none;
-	}
-
-button, 
-input[type="button"], 
-input[type="reset"], 
-input[type="submit"] { 
--webkit-appearance : button; }
-
-::-webkit-input-placeholder {
-font-size : .875em; 
-line-height : 1.4; }
-
-input:-moz-placeholder { 
-font-size : .875em; 
-line-height : 1.4; }
-
-.ie7 img,
-.iem7 img { 
--ms-interpolation-mode : bicubic; }
-
-input[type="checkbox"], 
-input[type="radio"] { 
-box-sizing : border-box; }
-
-input[type="search"] { 
--webkit-box-sizing : content-box;
--moz-box-sizing : content-box; }
-
-button::-moz-focus-inner, 
-input::-moz-focus-inner { 
-padding : 0;
-border : 0; }
