--- a/assets/css/devede.css
+++ b/assets/css/devede.css
@@ -1,11 +1,9 @@
 /* $ Blocks */
-
 body {
 	background: #fafafa;
 	color: #222222;
 	font: 400 16px/1.4 'Open Sans', sans-serif;
 }
-
 header,
 nav,
 section,
@@ -17,9 +15,6 @@ footer {
 }
 header { padding: 1rem; }
 nav { margin-bottom: 3rem; }
-
-
-
 /* $ Navigation */
 nav a {
 	background: #efefef;
@@ -50,7 +45,6 @@ nav li:last-child a {
 	border-right: #6b267c 1px solid;
 	border-top-right-radius: 3px;
 }
-
 .list-inline li {
 	display: inline-block;
 }
@@ -60,9 +54,6 @@ nav li:last-child a {
 	margin: 0;
 	padding: 0;
 }
-
-
-
 /* $ Footer */
 footer {
 	background: #222222;
@@ -74,7 +65,6 @@ footer {
 	padding: 1rem calc(50% - 30rem + 1rem) 1rem calc(50% - 30rem + 1rem + 6px);
 	right: 0;
 }
-
 footer a {
 	color: #ccc;
 }
@@ -90,11 +80,7 @@ footer a:hover img {
 	opacity: 1;
 	transition: all 300ms ease-in-out;
 }
-
-
-
 /* $ Typography */
-
 a {
 	color: #6b267c;
 	text-decoration: none;
@@ -107,7 +93,6 @@ a:active {
 	transition: color 300ms ease-in-out;
 }
 a:focus { outline: none; }
-
 h1 {
 	color: #222;
 	font: 300 5rem/1 'Open Sans', serif;
@@ -132,20 +117,15 @@ h5 {
 h6 {
 	font-size: 1em;
 }
-
 b,
 strong { font-weight: 600; }
-small { font-size: .8em; }
+small { font-size: 0.8em; }
 ul {
 	padding: 0 0 0 1.4rem;
 }
-
 header h1 {
 	margin: 0;
 }
-
-
-
 /* $ Buttons */
 .button {
 	background-color: #fafafa;
@@ -154,9 +134,10 @@ header h1 {
 	background-size: contain;
 	border: #ccc 1px solid;
 	border-radius: 3px;
-	box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),
-		0 2px 10px 0 rgba(0,0,0,0.12);
-	color: #222;
+	box-shadow:
+		0 2px 5px 0 rgba(0, 0, 0, 0.16),
+		0 2px 10px 0 rgba(0, 0, 0, 0.12);
+	color: #222222;
 	cursor: pointer;
 	display: inline-block;
 	margin: 1rem 0;
@@ -183,11 +164,7 @@ header h1 {
 .button h2 {
 	margin: 0;
 }
-
-
-
 /* $ Utility Classes */
-
 img {
 	border: 0;
 	max-width: 100%;
@@ -215,20 +192,17 @@ hr {
 	padding: 0;
 	width: 100%;
 }
-
 .columns-two {
 	column-count: 2;
 	column-gap: 1rem;
 }
-
 ::selection {
 	background: #8c519c;
 	color: #fafafa;
 	text-shadow: none;
 }
-
 #cookie-compliance-banner {
-	background: #eee;
+	background: #eeeeee;
 	padding: 1rem;
 	text-align: center;
 }
