--- a/assets/css/devede.css
+++ b/assets/css/devede.css
@@ -3,6 +3,8 @@ body {
 	background: #fafafa;
 	color: #222222;
 	font: 400 16px/1.4 'Open Sans', sans-serif;
+	margin: 0;
+	padding: 0;
 }
 header,
 nav,
